tests/NormalTests/paczka1/small_fuzzy/96516871.err
Error in line 3: cMM S636 95,2
Error in line 1: njf S636 85,3
Error in line 11: njf S193 90,2
